# ml-performance-monitoring

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mltest  pyproject.toml
.github/workflows/: repolinter.yml
examples/: RandomForestClassifier_example_dashboard.json  TensorFlow_on_California_housing_prices_dataset.ipynb  XGBoost_on_Boston_housing_prices_dataset.ipynb  XGBoost_on_California_housing_prices_dataset.ipynb  sklearn.RandomForestClassifier_on_Iris_dataset.ipynb
src/ml_performance_monitoring/: monitor.py  poc.py  poc_example.py  poc_predict.py  psi.py
tests/: conftest.py  test_monitor.py
